# music-tag-manager

./: .bumpver.toml  .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/cli/: __init__.py  console_format.py  main.py
app/cli/commands/: __init__.py  analyze_commands.py  fix_field_command.py  force_album_artist_command.py  sanitize_command.py  set_genres_command.py  swap_artists_command.py  version_command.py
app/core/: __init__.py  base_analyzer.py  base_tag_manager.py  base_tags_schemas.py
app/enums/: __init__.py  format_enum.py  id3_versions_enum.py  m4a_tags_enum.py  mp3_tags_enum.py
app/m4a/: __init__.py  m4a_tag_analyzer.py  m4a_tag_manager.py
app/mp3/: __init__.py  mp3_tag_analyzer.py  mp3_tag_manager.py
app/schemas/: __init__.py  edit_result_schemas.py  m4a_schemas.py  mp3_schemas.py  processed_files_schemas.py
app/settings/: __init__.py  app_version.py
mtm/cli/: __init__.py  cli_parser.py  console_format.py  main.py
mtm/cli/commands/: __init__.py  analyze_commands.py  fix_field_command.py  force_album_artist_command.py  sanitize_command.py  set_genres_command.py  swap_artists_command.py  version_command.py
mtm/core/: __init__.py  base_analyzer.py  base_tag_manager.py
mtm/enums/: __init__.py  edit_status_enum.py  format_enum.py  item_type_enum.py
mtm/m4a/: __init__.py  m4a_tag_analyzer.py  m4a_tag_manager.py
mtm/mp3/: __init__.py  mp3_tag_analyzer.py  mp3_tag_manager.py
mtm/schemas/: __init__.py  edit_result_schemas.py  m4a_schemas.py  mp3_schemas.py
mtm/settings/: __init__.py  app_version.py  log_settings.py
