[project]
name = "tag-manager"
version = "0.2.1"
description = "Una CLI mínima para edición de metadatos pensado para librerías en Navidrome."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mutagen>=1.47.0",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
]

[project.scripts]
mtm = "mtm.main:main"

[dependency-groups]
dev = [
    "bumpver>=2026.1132",
]
